--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
       <div class="collapse navbar-collapse" id="myNavBar">
         <ul class="navbar-nav ml-auto" >
           <li class="nav-item navlist">
-            <a href="#home" class="nav-link scrollto active">Home</a>
+            <a href="#home" class="nav-link  active">Home</a>
           </li>
           <li class="nav-item navlist">
-            <a href="#about" class="nav-link scrollto">About</a>
+            <a href="#about" class="nav-link ">About</a>
           </li>
-          <li class="nav-item navlist scrollto">
+          <li class="nav-item navlist ">
             <a href="#" class="nav-link">Team</a>
           </li>
           <li class="nav-item navlist scrollto">
@@ -36,19 +36,22 @@
      <div class="container-fluid hero-background " id="home" >
       <div class="container">
         <div class="row hero">
-          <div class="col-xl-8 col-lg-11 col-md-11 col-xs-12">
+           <div class="col-xl-8 col-lg-11 col-md-11 col-xs-12">
               <h3>Welcome To </h3>
               <h1>Thunder Developer</h1>
               <p>We are team of talented designers making websites with Bootstrap</p>
-          </div>
+              <div class="col " >
+                <img src="./teambg.jpg" alt="" class="team-bg" />
+              </div>
+           </div>
         </div>
       </div>
      </div>
      <section  class="hero-container">
-      <div class="container" data-aos="fade-up">
+      <div class="container" >
         <div class="row">
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0 hero-container1">
-            <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
+            <div class="icon-box" >
               <div class="icon">
                 <i class="fas fa-basketball-ball"></i>
               </div>
@@ -60,7 +63,7 @@
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0 hero-container1">
-            <div class="icon-box" data-aos="fade-up" data-aos-delay="200">
+            <div class="icon-box">
               <div class="icon">
                 <i class="far fa-address-card"></i>
               </div>
@@ -72,7 +75,7 @@
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
-            <div class="icon-box" data-aos="fade-up" data-aos-delay="300">
+            <div class="icon-box">
               <div class="icon">
                 <i class="fas fa-tachometer-alt"></i>
               </div>
@@ -84,7 +87,7 @@
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0">
-            <div class="icon-box" data-aos="fade-up" data-aos-delay="400">
+            <div class="icon-box" >
               <div class="icon">
                 <i class="fas fa-globe-americas"></i>
               </div>
