--- a/index.html
+++ b/index.html
@@ -40,9 +40,6 @@
               <h3>Welcome To </h3>
               <h1>Thunder Developer</h1>
               <p>We are team of talented designers making websites with Bootstrap</p>
-              <div class="col " >
-                <img src="./teambg.jpg" alt="" class="team-bg" />
-              </div>
            </div>
         </div>
       </div>
@@ -99,6 +96,39 @@
           </div>
         </div>
       </div>
+      </section>
+      <section class="about-header">
+        <div class="container" id="about">
+          <div class="row">
+            <div class="about-title col-xl-12">
+              <h6>ABOUT</h6>
+              <h4 class="about-title1">Find out more &nbsp<span style="color: #106eea;">About Us</span></h4>
+              <p class="about-title-p1">The strength of the team is each individual member. The strength of each member is the team</p>
+            </div>
+          </div>
+            <div class="row">
+            <img src="./assets/images/team-about-bg.jpg" class="col-xl-6 team-about-bg" />
+            <div class="col-xl-6 team-about-details">
+                <h3 class="p0">We are team of Thunder Developer,We have 8 team member with one team leader</h3>
+                <a href="" class="about-logo"><i class="far fa-user-circle"></i></a>  
+                <h6 class="h6"></h6>
+                <a href="" class="about-logo"><i class="far fa-user-circle"></i></a> 
+                <h6 class="h6">M.Thirukumaran.(Final Year Student ECE,Team Member)</h6> 
+                <a href="" class="about-logo"><i class="far fa-user-circle"></i></a>  
+                <h6 class="h6"></h6> 
+                <a href="" class="about-logo"><i class="far fa-user-circle"></i></a>  
+                <h6 class="h6"></h6> 
+                <a href="" class="about-logo"><i class="far fa-user-circle"></i></a>  
+                <h6 class="h6"></h6>  
+                <a href="" class="about-logo"><i class="far fa-user-circle"></i></a>  
+                <h6 class="h6"></h6> 
+                <a href="" class="about-logo"><i class="far fa-user-circle"></i></a>  
+                <h6 class="h6"></h6> 
+                <a href="" class="about-logo"><i class="far fa-user-circle"></i></a>  
+                <h6 class="h6"></h6> 
+            </div>
+          </div>
+        </div>
       </section>
     <script src="assets\js\jquery.min.js"></script>
     <script src="assets\js\bootstrap.bundle.min.js"></script>
